first pixel perfect

--- a/index.html
+++ b/index.html
@@ -12,48 +12,45 @@
 <body class="root">
   <div class="page">
     <header class="header">
-      <div class="header__container">
-        <img src="./images/__logo.png" alt="Логотип" class="logo logo_place_header">
-        <div>
-          <a class="header__link" href="#">Ru</a>
-          <a class="header__link" href="#">En</a>
-        </div>
-
+      <img src="./images/__logo.png" alt="Логотип" class="header__logo">
+      <div>
+        <a class="header__link underline" href="#">Ru</a>
+        <a class="header__link underline" href="#">En</a>
       </div>
     </header>
 
     <section class="lead">
       <div class="lead__container">
-        <h2 class="lead__title">Путешествия по России</h2>
+        <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках
           новостей, а здесь.</p>
         <div class="lead__train">
           <div class="lead__way"></div>
         </div>
-        <p class="lead__quote">ВАША ПОЛКА — ВЕРХНЯЯ</p>
+        <p class="lead__quote">ваша полка — верхняя</p>
       </div>
     </section>
 
     <main class="content">
       <section class="travel">
-        <div class="travel__container">
-          <h2 class="travel__title">Чего мы там не видели?</h2>
-          <p class="travel__quote">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
-            провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
-            вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти
-            красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова
-            — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч
-            километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
-          <ul class="travel__time-zones">
-            <li class="travel__time-zone">Часовых поясов <span class="travel__span-accent">11</span></li>
-            <li class="travel__time-zone">Объектов культурного наследия ЮНЕСКО <span
-                class="travel__span-accent">12</span></li>
-            <li class="travel__time-zone">Объектов культурного наследия ЮНЕСКО <span
-                class="travel__span-accent">16</span></li>
-            <li class="travel__time-zone">Природных заповедников <span class="travel__span-accent">105</span></li>
-            <li class="travel__time-zone">Аэропортов <span class="travel__span-accent">241</span></li>
-          </ul>
-        </div>
+        <h2 class="travel__title">Чего мы там не&nbsp;видели?</h2>
+        <p class="travel__quote">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но&nbsp;только 36% планируют
+          провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
+          вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти
+          красоты можно без&nbsp;миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера
+          Башмакова
+          — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и&nbsp;проехала 20 тысяч
+          километров по&nbsp;родной стране. Мы выбрали и&nbsp;описали некоторые интересные места, достойные вашего
+          отпуска.</p>
+        <ul class="travel__time-zones">
+          <li class="travel__time-zone">Часовых поясов <span class="travel__span-accent">11</span></li>
+          <li class="travel__time-zone">Объектов культурного наследия ЮНЕСКО <span class="travel__span-accent">12</span>
+          </li>
+          <li class="travel__time-zone">Объектов культурного наследия ЮНЕСКО <span class="travel__span-accent">16</span>
+          </li>
+          <li class="travel__time-zone">Природных заповедников <span class="travel__span-accent">105</span></li>
+          <li class="travel__time-zone">Аэропортов <span class="travel__span-accent">241</span></li>
+        </ul>
       </section>
 
       <div class="grid">
@@ -73,28 +70,23 @@
         </div>
       </div>
 
-
-
-
       <section class="places">
-        <div class="places__container">
-
-          <h3 class="places__title places__title_theme">Куршская коса</h3>
-
+        <div class="places__container places__container_theme">
+          <h2 class="places__title places__title_theme">Куршская коса</h2>
           <div>
             <p class="places__url">URL</p>
             <a class="places__link" href="http://park-kosa.ru">park-kosa.ru</a>
           </div>
-
-          <img src="./images/__image-4.png" alt="Куршская коса" class="places__kosa">
-
+          <img src="./images/__image-4.png" alt="Куршская коса" class="places__image">
           <div>
             <p class="places__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
               спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная
-              природная зона на краю российского анклава.</p>
-            <p class="places__paragraph">На этом Калининградская область не заканчивается. Для путешественника и
-              исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие
-              россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы
+              природная зона на&nbsp;краю российского анклава.</p>
+            <p class="places__paragraph">На этом Калининградская область не заканчивается. Для&nbsp;путешественника
+              и&nbsp;исследователя там же по&nbsp;соседству — самая западная точка России, Балтийская коса, —
+              и&nbsp;немецкое наследие
+              россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в&nbsp;спокойствие
+              природы
               и запах стального, прохладного моря.</p>
           </div>
         </div>
@@ -102,21 +94,17 @@
 
       <section class="places">
         <div class="places__container">
-
-          <h3 class="places__title">Кольский</h3>
-
+          <h2 class="places__title">Кольский</h2>
           <div>
             <p class="places__url">URL</p>
             <a class="places__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy
             ">National Geographic</a>
           </div>
-
-          <img src="./images/__image-3.png" alt="Кольский" class="places__kosa">
-
+          <img src="./images/__image-3.png" alt="Кольский" class="places__image">
           <div>
             <p class="places__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой
               на юг —
-              тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+              тайга, а&nbsp;на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
             <p class="places__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля
               в
               Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии.
@@ -129,47 +117,41 @@
 
       <section class="places">
         <div class="places__container">
-
-          <h3 class="places__title">Алтай</h3>
-
+          <h2 class="places__title">Алтай</h2>
           <div>
             <p class="places__url">URL</p>
             <a class="places__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
           </div>
-
-          <img src="./images/__image-2.png" alt="Алтай" class="places__kosa">
-
+          <img src="./images/__image-2.png" alt="Алтай" class="places__image">
           <div>
             <p class="places__paragraph">Алтай — одно из красивейших мест в России.
               В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
-              озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным
+              озёра. А&nbsp;если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест —
+              горным
               воздухом.</p>
             <p class="places__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите
-              всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на
-              равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
+              всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а&nbsp;на
+              равнинах пасутся косули. И&nbsp;знаменитые манулы — тоже обитатели Алтайского края.</p>
           </div>
         </div>
       </section>
 
       <section class="places">
         <div class="places__container">
-
-          <h3 class="places__title">Зимний Байкал</h3>
-
+          <h2 class="places__title">Зимний Байкал</h2>
           <div>
             <p class="places__url places__url_size">URL</p>
             <a class="places__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
           </div>
-
-          <img src="./images/__image-1.png" alt="Зимний Байкал" class="places__kosa">
-
+          <img src="./images/__image-1.png" alt="Зимний Байкал" class="places__image">
           <div>
             <p class="places__paragraph">Всем известен Байкал как крупнейшее озеро
-              в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в
-              России.</p>
+              в мире. Многие также знают, что это самый большой источник пресной воды и&nbsp;одно из красивейших мест
+              в&nbsp;России.</p>
             <p class="places__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по
               скийорингу. Это такой вид спорта, когда лыжник привязывает себя
-              к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале
+              к&nbsp;мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на
+              фестивале
               «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
           </div>
         </div>
@@ -177,16 +159,12 @@
 
       <section class="places">
         <div class="places__container">
-          <div>
-            <h3 class="places__title">Карелия</h3>
-          </div>
+          <h2 class="places__title">Карелия</h2>
           <div>
             <p class="places__url">URL</p>
             <a class="places__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
           </div>
-
-          <img src="./images/__image.png" alt="Карелия" class="places__kosa">
-
+          <img src="./images/__image.png" alt="Карелия" class="places__image">
           <p class="places__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
             лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
             национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем
@@ -200,30 +178,26 @@
       <section class="baikal">
         <a class="baikal__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
           <h2 class="baikal__title">До Байкала «на собаках»</h2>
-          <p class="baikal__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+          <p class="baikal__subtitle">По мотивам учебной темы о&nbsp;Транссибе — путешествие от столицы до Байкала на
+            электричках.</p>
         </a>
       </section>
 
-
-
-
     </main>
-
     <footer class="footer">
-      <div class="footer__columns">
-        <div class="footer__list">
-          <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
-          <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
-          <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
-          <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
-          <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
-        </div>
 
-        <p class="footer__copyright">© 2020. Впишите своё имя</p>
+      <nav>
+        <ul class="footer__list">
+          <li><a class="footer__link" href="https://yandex.ru/maps">Карты</a></li>
+          <li><a class="footer__link" href="https://yandex.ru/pogoda">Погода</a></li>
+          <li><a class="footer__link" href="https://rasp.yandex.ru">Расписание</a></li>
+          <li><a class="footer__link" href="https://calendar.yandex.ru">Календарь</a></li>
+          <li><a class="footer__link" href="https://travel.yandex.ru">Путешествия</a></li>
+        </ul>
+      </nav>
+      <p class="footer__copyright">© 2020. Впишите своё имя</p>
 
-      </div>
     </footer>
-
   </div>
 </body>
 
