--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <header class="header">
       <img src="./images/__logo.png" alt="Логотип" class="header__logo">
       <div>
-        <a class="header__link underline" href="#">Ru</a>
-        <a class="header__link underline" href="#">En</a>
+        <a class="header__link header__link_underline" href="#">Ru</a>
+        <a class="header__link header__link_underline" href="#">En</a>
       </div>
     </header>
 
@@ -71,7 +71,7 @@
       </div>
 
       <section class="places">
-        <div class="places__container places__container_theme">
+        <div class="places__container places__container_theme">  
           <h2 class="places__title places__title_theme">Куршская коса</h2>
           <div>
             <p class="places__url">URL</p>
