--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
       </div>
 
       <section class="places">
-        <div class="places__container places__container_theme">
-          <h2 class="places__title places__title_theme">Куршская коса</h2>
+        <div class="places__container">
+          <h2 class="places__title">Куршская коса</h2>
           <div>
             <p class="places__url">URL</p>
             <a class="places__link" href="http://park-kosa.ru">park-kosa.ru</a>
@@ -90,9 +90,9 @@
               и запах стального, прохладного моря.</p>
           </div>
         </div>
-      </section>
 
-      <section class="places">
+
+
         <div class="places__container">
           <h2 class="places__title">Кольский</h2>
           <div>
@@ -113,9 +113,9 @@
               в Мурманск.</p>
           </div>
         </div>
-      </section>
 
-      <section class="places">
+
+
         <div class="places__container">
           <h2 class="places__title">Алтай</h2>
           <div>
@@ -134,13 +134,11 @@
               равнинах пасутся косули. И&nbsp;знаменитые манулы — тоже обитатели Алтайского края.</p>
           </div>
         </div>
-      </section>
 
-      <section class="places">
-        <div class="places__container">
+       <div class="places__container">
           <h2 class="places__title">Зимний Байкал</h2>
           <div>
-            <p class="places__url places__url_size">URL</p>
+            <p class="places__url">URL</p>
             <a class="places__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
           </div>
           <img src="./images/__image-1.png" alt="Зимний Байкал" class="places__image">
@@ -155,9 +153,9 @@
               «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
           </div>
         </div>
-      </section>
 
-      <section class="places">
+
+
         <div class="places__container">
           <h2 class="places__title">Карелия</h2>
           <div>
