--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <section class="places">
         <div class="places__container">
           <h2 class="places__title">Куршская коса</h2>
-          <div>
+          <div class="places__website">
             <p class="places__url">URL</p>
             <a class="places__link" href="http://park-kosa.ru">park-kosa.ru</a>
           </div>
@@ -95,7 +95,7 @@
 
         <div class="places__container">
           <h2 class="places__title">Кольский</h2>
-          <div>
+          <div class="places__website">
             <p class="places__url">URL</p>
             <a class="places__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy
             ">National Geographic</a>
@@ -118,7 +118,7 @@
 
         <div class="places__container">
           <h2 class="places__title">Алтай</h2>
-          <div>
+          <div class="places__website">
             <p class="places__url">URL</p>
             <a class="places__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
           </div>
@@ -135,9 +135,11 @@
           </div>
         </div>
 
+
+     
        <div class="places__container">
           <h2 class="places__title">Зимний Байкал</h2>
-          <div>
+          <div class="places__website">
             <p class="places__url">URL</p>
             <a class="places__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
           </div>
@@ -156,9 +158,10 @@
 
 
 
+
         <div class="places__container">
           <h2 class="places__title">Карелия</h2>
-          <div>
+          <div class="places__website">
             <p class="places__url">URL</p>
             <a class="places__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
           </div>
