--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <header class="header">
       <img src="./images/__logo.png" alt="Логотип" class="header__logo">
       <div>
-        <a class="header__link header__link_underline" href="#">Ru</a>
-        <a class="header__link header__link_underline" href="#">En</a>
+        <a class="header__link header__link_underline hover-link" href="#">Ru</a>
+        <a class="header__link hover-link" href="#">En</a>
       </div>
     </header>
 
@@ -53,8 +53,8 @@
         </ul>
       </section>
 
-      <div class="grid">
-        <div class="cards">
+     
+        <section class="cards">
           <img src="./images/__item-11.png" alt="Окно" class="cards__item">
           <img src="./images/__item-10.png" alt="Горы" class="cards__item">
           <img src="./images/__item-9.png" alt="Собака на сене" class="cards__item">
@@ -68,14 +68,14 @@
           <img src="./images/__item-1.png" alt="Скалистый берег" class="cards__item">
           <img src="./images/__item.png" alt="Еще один туман" class="cards__item">
         </div>
-      </div>
+
 
       <section class="places">
         <div class="places__container">
           <h2 class="places__title">Куршская коса</h2>
           <div class="places__website">
             <p class="places__url">URL</p>
-            <a class="places__link" href="http://park-kosa.ru">park-kosa.ru</a>
+            <a class="places__link hover-link" href="http://park-kosa.ru">park-kosa.ru</a>
           </div>
           <img src="./images/__image-4.png" alt="Куршская коса" class="places__image">
           <div>
@@ -97,7 +97,7 @@
           <h2 class="places__title">Кольский</h2>
           <div class="places__website">
             <p class="places__url">URL</p>
-            <a class="places__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy
+            <a class="places__link hover-link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy
             ">National Geographic</a>
           </div>
           <img src="./images/__image-3.png" alt="Кольский" class="places__image">
@@ -120,7 +120,7 @@
           <h2 class="places__title">Алтай</h2>
           <div class="places__website">
             <p class="places__url">URL</p>
-            <a class="places__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
+            <a class="places__link hover-link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
           </div>
           <img src="./images/__image-2.png" alt="Алтай" class="places__image">
           <div>
@@ -141,7 +141,7 @@
           <h2 class="places__title">Зимний Байкал</h2>
           <div class="places__website">
             <p class="places__url">URL</p>
-            <a class="places__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+            <a class="places__link hover-link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
           </div>
           <img src="./images/__image-1.png" alt="Зимний Байкал" class="places__image">
           <div>
@@ -163,7 +163,7 @@
           <h2 class="places__title">Карелия</h2>
           <div class="places__website">
             <p class="places__url">URL</p>
-            <a class="places__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
+            <a class="places__link hover-link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
           </div>
           <img src="./images/__image.png" alt="Карелия" class="places__image">
           <p class="places__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
