--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <a class="places__link hover-link" href="http://park-kosa.ru">park-kosa.ru</a>
           </div>
           <img src="./images/__image-4.png" alt="Куршская коса" class="places__image">
-          <div>
+          <div class="places__text">
             <p class="places__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
               спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная
               природная зона на&nbsp;краю российского анклава.</p>
