--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             ">National Geographic</a>
           </div>
           <img src="./images/__image-3.png" alt="Кольский" class="places__image">
-          <div>
+          <div class="places__text">
             <p class="places__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой
               на юг —
               тайга, а&nbsp;на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
@@ -123,7 +123,7 @@
             <a class="places__link hover-link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
           </div>
           <img src="./images/__image-2.png" alt="Алтай" class="places__image">
-          <div>
+          <div class="places__text">
             <p class="places__paragraph">Алтай — одно из красивейших мест в России.
               В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
               озёра. А&nbsp;если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест —
@@ -144,7 +144,7 @@
             <a class="places__link hover-link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
           </div>
           <img src="./images/__image-1.png" alt="Зимний Байкал" class="places__image">
-          <div>
+          <div class="places__text">
             <p class="places__paragraph">Всем известен Байкал как крупнейшее озеро
               в мире. Многие также знают, что это самый большой источник пресной воды и&nbsp;одно из красивейших мест
               в&nbsp;России.</p>
@@ -166,6 +166,7 @@
             <a class="places__link hover-link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
           </div>
           <img src="./images/__image.png" alt="Карелия" class="places__image">
+          <div class="places__text">
           <p class="places__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
             лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
             национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем
