--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
       <img src="./images/__logo.png" alt="Логотип" class="header__logo">
       <div>
-        <a class="header__link header__link_underline hover-link" href="#">Ru</a>
+        <a class="header__link header__link_active hover-link" href="#">Ru</a>
         <a class="header__link hover-link" href="#">En</a>
       </div>
     </header>
@@ -53,153 +53,140 @@
         </ul>
       </section>
 
-     
-        <section class="cards">
-          <img src="./images/__item-11.png" alt="Окно" class="cards__item">
-          <img src="./images/__item-10.png" alt="Горы" class="cards__item">
-          <img src="./images/__item-9.png" alt="Собака на сене" class="cards__item">
-          <img src="./images/__item-8.png" alt="Туман в горах" class="cards__item">
-          <img src="./images/__item-7.png" alt="Лёд" class="cards__item">
-          <img src="./images/__item-6.png" alt="Берег океана" class="cards__item">
-          <img src="./images/__item-5.png" alt="Горы" class="cards__item">
-          <img src="./images/__item-4.png" alt="Переход" class="cards__item">
-          <img src="./images/__item-3.png" alt="Туман над сопками" class="cards__item">
-          <img src="./images/__item-2.png" alt="Вулкан" class="cards__item">
-          <img src="./images/__item-1.png" alt="Скалистый берег" class="cards__item">
-          <img src="./images/__item.png" alt="Еще один туман" class="cards__item">
-        </div>
+      <section class="cards">
+        <img src="./images/__item-11.png" alt="Окно" class="cards__item">
+        <img src="./images/__item-10.png" alt="Горы" class="cards__item">
+        <img src="./images/__item-9.png" alt="Собака на сене" class="cards__item">
+        <img src="./images/__item-8.png" alt="Туман в горах" class="cards__item">
+        <img src="./images/__item-7.png" alt="Лёд" class="cards__item">
+        <img src="./images/__item-6.png" alt="Берег океана" class="cards__item">
+        <img src="./images/__item-5.png" alt="Горы" class="cards__item">
+        <img src="./images/__item-4.png" alt="Переход" class="cards__item">
+        <img src="./images/__item-3.png" alt="Туман над сопками" class="cards__item">
+        <img src="./images/__item-2.png" alt="Вулкан" class="cards__item">
+        <img src="./images/__item-1.png" alt="Скалистый берег" class="cards__item">
+        <img src="./images/__item.png" alt="Еще один туман" class="cards__item">
+      </section>
 
+  <section class="places">
+    <div class="places__container">
+      <h2 class="places__title">Куршская коса</h2>
+      <div class="places__website">
+        <p class="places__url">URL</p>
+        <a class="places__link hover-link" href="http://park-kosa.ru">park-kosa.ru</a>
+      </div>
+      <img src="./images/__image-4.png" alt="Куршская коса" class="places__image">
+      <div class="places__text">
+        <p class="places__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
+          спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная
+          природная зона на&nbsp;краю российского анклава.</p>
+        <p class="places__paragraph">На этом Калининградская область не заканчивается. Для&nbsp;путешественника
+          и&nbsp;исследователя там же по&nbsp;соседству — самая западная точка России, Балтийская коса, —
+          и&nbsp;немецкое наследие
+          россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в&nbsp;спокойствие
+          природы
+          и запах стального, прохладного моря.</p>
+      </div>
+    </div>
 
-      <section class="places">
-        <div class="places__container">
-          <h2 class="places__title">Куршская коса</h2>
-          <div class="places__website">
-            <p class="places__url">URL</p>
-            <a class="places__link hover-link" href="http://park-kosa.ru">park-kosa.ru</a>
-          </div>
-          <img src="./images/__image-4.png" alt="Куршская коса" class="places__image">
-          <div class="places__text">
-            <p class="places__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
-              спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная
-              природная зона на&nbsp;краю российского анклава.</p>
-            <p class="places__paragraph">На этом Калининградская область не заканчивается. Для&nbsp;путешественника
-              и&nbsp;исследователя там же по&nbsp;соседству — самая западная точка России, Балтийская коса, —
-              и&nbsp;немецкое наследие
-              россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в&nbsp;спокойствие
-              природы
-              и запах стального, прохладного моря.</p>
-          </div>
-        </div>
-
-
-
-        <div class="places__container">
-          <h2 class="places__title">Кольский</h2>
-          <div class="places__website">
-            <p class="places__url">URL</p>
-            <a class="places__link hover-link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy
+    <div class="places__container">
+      <h2 class="places__title">Кольский</h2>
+      <div class="places__website">
+        <p class="places__url">URL</p>
+        <a class="places__link hover-link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy
             ">National Geographic</a>
-          </div>
-          <img src="./images/__image-3.png" alt="Кольский" class="places__image">
-          <div class="places__text">
-            <p class="places__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой
-              на юг —
-              тайга, а&nbsp;на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-            <p class="places__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля
-              в
-              Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии.
-              Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно
-              накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
-              в Мурманск.</p>
-          </div>
-        </div>
+      </div>
+      <img src="./images/__image-3.png" alt="Кольский" class="places__image">
+      <div class="places__text">
+        <p class="places__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой
+          на юг —
+          тайга, а&nbsp;на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+        <p class="places__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля
+          в
+          Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии.
+          Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно
+          накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
+          в Мурманск.</p>
+      </div>
+    </div>
 
+    <div class="places__container">
+      <h2 class="places__title">Алтай</h2>
+      <div class="places__website">
+        <p class="places__url">URL</p>
+        <a class="places__link hover-link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
+      </div>
+      <img src="./images/__image-2.png" alt="Алтай" class="places__image">
+      <div class="places__text">
+        <p class="places__paragraph">Алтай — одно из красивейших мест в России.
+          В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
+          озёра. А&nbsp;если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест —
+          горным
+          воздухом.</p>
+        <p class="places__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите
+          всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а&nbsp;на
+          равнинах пасутся косули. И&nbsp;знаменитые манулы — тоже обитатели Алтайского края.</p>
+      </div>
+    </div>
 
+    <div class="places__container">
+      <h2 class="places__title">Зимний Байкал</h2>
+      <div class="places__website">
+        <p class="places__url">URL</p>
+        <a class="places__link hover-link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+      </div>
+      <img src="./images/__image-1.png" alt="Зимний Байкал" class="places__image">
+      <div class="places__text">
+        <p class="places__paragraph">Всем известен Байкал как крупнейшее озеро
+          в мире. Многие также знают, что это самый большой источник пресной воды и&nbsp;одно из красивейших мест
+          в&nbsp;России.</p>
+        <p class="places__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по
+          скийорингу. Это такой вид спорта, когда лыжник привязывает себя&nbsp;к мотоциклу, и тандем старается развить
+          как можно бóльшую скорость на льду. В марте 2019 года на
+          фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
+      </div>
+    </div>
 
-        <div class="places__container">
-          <h2 class="places__title">Алтай</h2>
-          <div class="places__website">
-            <p class="places__url">URL</p>
-            <a class="places__link hover-link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
-          </div>
-          <img src="./images/__image-2.png" alt="Алтай" class="places__image">
-          <div class="places__text">
-            <p class="places__paragraph">Алтай — одно из красивейших мест в России.
-              В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
-              озёра. А&nbsp;если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест —
-              горным
-              воздухом.</p>
-            <p class="places__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите
-              всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а&nbsp;на
-              равнинах пасутся косули. И&nbsp;знаменитые манулы — тоже обитатели Алтайского края.</p>
-          </div>
-        </div>
+    <div class="places__container">
+      <h2 class="places__title">Карелия</h2>
+      <div class="places__website">
+        <p class="places__url">URL</p>
+        <a class="places__link hover-link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
+      </div>
+      <img src="./images/__image.png" alt="Карелия" class="places__image">
+      <div class="places__text">
+        <p class="places__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
+          лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
+          национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем
+          полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
+          В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
+          в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+      </div>
+    </div>
+  </section>
 
+  <section class="baikal">
+    <a class="baikal__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+      <h2 class="baikal__title">До Байкала «на собаках»</h2>
+      <p class="baikal__subtitle">По мотивам учебной темы о&nbsp;Транссибе — путешествие от столицы до Байкала на
+        электричках.</p>
+    </a>
+  </section>
 
-     
-       <div class="places__container">
-          <h2 class="places__title">Зимний Байкал</h2>
-          <div class="places__website">
-            <p class="places__url">URL</p>
-            <a class="places__link hover-link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
-          </div>
-          <img src="./images/__image-1.png" alt="Зимний Байкал" class="places__image">
-          <div class="places__text">
-            <p class="places__paragraph">Всем известен Байкал как крупнейшее озеро
-              в мире. Многие также знают, что это самый большой источник пресной воды и&nbsp;одно из красивейших мест
-              в&nbsp;России.</p>
-            <p class="places__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по
-              скийорингу. Это такой вид спорта, когда лыжник привязывает себя
-              к&nbsp;мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на
-              фестивале
-              «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
-          </div>
-        </div>
+  </main>
+  <footer class="footer">
+    <nav>
+      <ul class="footer__list">
+        <li><a class="footer__link" href="https://yandex.ru/maps">Карты</a></li>
+        <li><a class="footer__link" href="https://yandex.ru/pogoda">Погода</a></li>
+        <li><a class="footer__link" href="https://rasp.yandex.ru">Расписание</a></li>
+        <li><a class="footer__link" href="https://calendar.yandex.ru">Календарь</a></li>
+        <li><a class="footer__link" href="https://travel.yandex.ru">Путешествия</a></li>
+      </ul>
+    </nav>
+    <p class="footer__copyright">© 2020. Максим</p>
 
-
-
-
-        <div class="places__container">
-          <h2 class="places__title">Карелия</h2>
-          <div class="places__website">
-            <p class="places__url">URL</p>
-            <a class="places__link hover-link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
-          </div>
-          <img src="./images/__image.png" alt="Карелия" class="places__image">
-          <div class="places__text">
-          <p class="places__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
-            лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
-            национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем
-            полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
-            В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
-            в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
-        </div>
-      </section>
-
-
-      <section class="baikal">
-        <a class="baikal__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
-          <h2 class="baikal__title">До Байкала «на собаках»</h2>
-          <p class="baikal__subtitle">По мотивам учебной темы о&nbsp;Транссибе — путешествие от столицы до Байкала на
-            электричках.</p>
-        </a>
-      </section>
-
-    </main>
-    <footer class="footer">
-
-      <nav>
-        <ul class="footer__list">
-          <li><a class="footer__link" href="https://yandex.ru/maps">Карты</a></li>
-          <li><a class="footer__link" href="https://yandex.ru/pogoda">Погода</a></li>
-          <li><a class="footer__link" href="https://rasp.yandex.ru">Расписание</a></li>
-          <li><a class="footer__link" href="https://calendar.yandex.ru">Календарь</a></li>
-          <li><a class="footer__link" href="https://travel.yandex.ru">Путешествия</a></li>
-        </ul>
-      </nav>
-      <p class="footer__copyright">© 2020. Впишите своё имя</p>
-
-    </footer>
+  </footer>
   </div>
 </body>
 
